syntax = "proto3";
package protocol;

option go_package = "protocol";
option java_multiple_files = true;
option java_package = "com.kone.pbdemo.protocol";


service FridaService {
    rpc LoadJS (Filebuff) returns (Empty) {}
    rpc streamMessages (StringArgument) returns (stream StringArgument);

}

service FridaClient {
    rpc on_message(StringArgument) returns (Empty) {}

}


message StringArgument {
    string data = 1;
}

message Filebuff {
    bytes Content = 1;
}



message Empty {}

