syntax = "proto3";
package protocol;

option go_package = "protocol";
option java_multiple_files = true;
option java_package = "com.test.fgum.type";




enum GrpcType {
  init = 0;
  file = 1;
  cmd = 2;
  log = 3;
}
enum GrpcStatus {
  successful = 0;
  failed = -1;
}
message StringArgument {
  string data = 1;
}

enum UseType{
  process = 0;
  observer = 1;
}

message Use {
  UseType userType = 1;
  int32 id = 2;
}

message GrpcMessage {
  GrpcStatus status = 4;
  int32 pid = 3;
  GrpcType type = 1;
  bytes Content = 2;
}

message Filebuff {
  bytes Content = 1;
}
//
//// The push response message
//message PushResponse {
//    string message = 1;
//}

message Empty {}
